fix alignment

--- a/UIComponents/dashboardBuilder/css/dashboard.css
+++ b/UIComponents/dashboardBuilder/css/dashboard.css
@@ -3,7 +3,9 @@ html {background: #efefef;}
 .pdt10 {padding-top: 10px;}
 .pdb10 {padding-bottom: 10px;}
 .pdr10 {padding-right: 10px;}
-
+.pdl10 {padding-left: 10px!important;}
+.pdl0 {padding-left: 0!important;}
+.pdr0 {padding-right: 0!important;}
 
 .pdt5 {padding-top: 5px;}
 .pdb5 {padding-bottom: 5px;}
@@ -75,6 +77,7 @@ margin: 0;
 }
 
 .page-header .form-group {margin-bottom: 0;}
+.page-header .form-control {height: 30px; font-size: 13px;}
 .page-header .help-block {display: none;}
 :focus {
   outline: 0!important;
@@ -101,7 +104,7 @@ margin: 0;
 
 /*** dashboard builder wrap ***/
 .slick-wrap {min-height: calc(100vh - 44px); background: #fff;}
-.chart-options-wrap {margin-right: -15px; padding-left: 6px; padding-right: 6px;}
+.chart-options-wrap {margin-right: -15px; padding-left: 9px; padding-right: 6px;}
 
 /***  devices-models-tree ***/
 .devices-models-tree {
